--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "start": "next start"
   },
   "dependencies": {
+    "@hookform/resolvers": "2.9.10",
+    "@next/font": "13.0.5",
     "@tanstack/react-query": "4.16.1",
     "@trpc/client": "10.0.0-rc.4",
     "@trpc/next": "10.0.0-rc.4",
@@ -23,6 +25,7 @@
     "zod": "3.19.1"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "0.5.3",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.8",
