--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@trpc/next": "10.0.0-rc.4",
     "@trpc/react-query": "10.0.0-rc.4",
     "@trpc/server": "10.0.0-rc.4",
+    "mailerlite-api-v2-node": "1.2.0",
     "next": "13.0.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
